Thu, Sep 6, 2007 Amos Anderson
1.  Code will now allow the setting of "ksi" from input file.

Tue, Sep 4, 2007 Amos Anderson
1.  I changed the code to use BLAS by default instead of CBLAS. This
    makes it easier to compile on systems where CBLAS is difficult to get,
    since BLAS is more common than CBLAS.

2.  I changed configure.py so that it knows about GotoBLAS, which appears
    to be faster than ATLAS, but does not bundle CBLAS.

Sat, Sep 1, 2007 Amos Anderson
1.  I fixed a bug in the Cambridge jastrows.

2.  I added parameter derivatives to the 3 particle jastrows, i think
    everything is optimizing correctly.

3.  I added a function in Array1D to make it easier to read arrays
    from the input file. Specifically, you don't have to type something
    for all the parameters in the input file, the function will read
    as many as available, and initialize the rest to some chosen value.

Tues, Aug 28, 2007 Daniel R Fisher
1.  I replaced the way that the symmetry and cusp conditions are
    enforced in QMCThreeBodyJastrowParameters with a matrix.  It is
    faster and more elegant to enforce the cusps and symmetry this
    way.  The transpose of the matrix should be useful for calculating
    derivatives of quantities with respect to the free parameters.  

Mon, Aug 27, 2007 Daniel R Fisher
1.  I revised the way that the free parameters are determined in the
    new class QMCThreeBodyJastrowParameters.  All of the parameters
    that are dependent due to cusp conditions are now excluded from the
    free parameter array, which should make optimization easier.

Sat, Aug 25, 2007 Daniel R Fisher
1.  I added three body Jastrow functions to the code.  They are
    identical to the function 'f' described in Physical Review B 70,
    235119 by the CASINO people.

Wed, Aug 20, 2007 Amos Anderson
1.  I added two new 2 particle Jastrow functions, based on the most
    recent publications from the CHAMP and CASINO people. They